--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 
   <head>
     <meta charset="utf-8">
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
     <title>My Times</title>
   </head>
 
   <body>
-    <div class="header">
-      <img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
-      <span class="nav">
-          <a href="#Times">My Times</a>
-          <a href="#World">World</a>
-          <a href="#US">U.S.</a>
-          <a href="#Tech">Tech</a>
-          <a href="#Science">Science</a>
-        </span>
+
+    <!-- Header -->
+    <div class="Container">
+
+    <!-- Items -->
+      <div class="nav">
+        <img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
+        <span class="times"><a href="#Times">My Times</a></span>
+        <span class="header"><a href="#World">World</a></span>
+        <span class="header"><a href="#US">U.S.</a></span>
+        <span class="header"><a href="#Tech">Tech</a></span>
+        <span class="header"><a href="#Science">Science</a></span>
+      </div>
+
     </div>
 
   </body>
