--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Items -->
       <div class="nav">
         <img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
-        <span class="times"><a href="#Times">My Times</a></span>
+        <span class="times">My Times</span>
         <span class="header"><a href="#World">World</a></span>
         <span class="header"><a href="#US">U.S.</a></span>
         <span class="header"><a href="#Tech">Tech</a></span>
