--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
   <body>
 
-    <!-- Header -->
+    <!-- Container -->
     <div class="Container">
 
-    <!-- Items -->
+    <!-- Flex Items -->
+      <div class="logo"><img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo"></div>
+      <div class="times">My Times</div>
       <div class="nav">
-        <img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
-        <span class="times">My Times</span>
-        <span class="header"><a href="#World">World</a></span>
-        <span class="header"><a href="#US">U.S.</a></span>
-        <span class="header"><a href="#Tech">Tech</a></span>
-        <span class="header"><a href="#Science">Science</a></span>
+        <span class="li"><a href="#World">World</a></span>
+        <span class="li"><a href="#US">U.S.</a></span>
+        <span class="li"><a href="#Tech">Tech</a></span>
+        <span class="li"><a href="#Science">Science</a></span>
       </div>
 
     </div>
