second day commit

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div class="Container">
 
     <!-- Flex Items -->
-      <div class="logo"><img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo"></div>
-      <div class="times">My Times</div>
+      <div class="logo">
+        <img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo">
+        <div class="times">My Times</div>
+      </div>
+
       <div class="nav">
         <span class="li"><a href="#World">World</a></span>
         <span class="li"><a href="#US">U.S.</a></span>
