--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
 <!-- Content Container -->
     <div class="Main">
 
-<!-- Column Container and flex items -->
-  <div class="large">
-       <div class="large-column">Mother of Three Buys Tuna Steak at Phish Concert. Leaves,"Feeling Funny."
+  <!-- Column Container and flex items -->
+    <!-- Large Items -->
+    <div class="large">
+       <div class="large-column">
+         Mother of Three Buys Tuna Steak at Phish Concert. Leaves,"Feeling Funny."
        </div>
-       <div class="large-column">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
+       <div class="large-column">
+        MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
         Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
         pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque
         vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
@@ -43,7 +46,8 @@
        <div class="large-column">
          <h2>Orca Spends Vacation at Land World Puget</h2>
          <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
-          purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+          purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
+          pulvinar ante accumsan...</p>
        </div>
        <div class="large-column">Earth Spins Backwards for 2017</div>
        <div class="large-column">
@@ -51,25 +55,39 @@
          <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut,
           rutrum enim. Praesent eu nisl erat.</p>
        </div>
-       <div class="large-column">Research Shows Cameras Erase Memory</div>
+       <div class="large-column">
+         Research Shows Cameras Erase Memory
+       </div>
     </div>
 
+    <!-- Medium Items -->
     <div class="medium">
-      <div class="medium-column">
-        <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-        <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
-      </div>
-      <div class="medium-column">Cats in Control-Is It a Thing?</div>
-      <div class="medium-column">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor,
-        quis commodo tellus pellentesque in.</div>
+        <div class="medium-column">
+          <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+          <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.
+          Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed.
+          Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi
+          pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat
+          pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum.
+          Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
+          </p>
+       </div>
+       <div class="medium-column">
+         Cats in Control-Is It a Thing?
+       </div>
+       <div class="medium-column">
+         BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor,
+         quis commodo tellus pellentesque in.
+       </div>
     </div>
 
+    <!-- Small Items -->
     <div class="small">
-      <div class="small-column">
-        <h1>NEWS BITES</h1>
-        <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials
+       <div class="small-column">
+         <h2>NEWS BITES</h2>
+         <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials
           Finally a Top Secret Way You Can</p>
-      </div>
+       </div>
     </div>
 
    </div>
