--- a/index.html
+++ b/index.html
@@ -32,32 +32,41 @@
   <!-- Column Container and flex items -->
     <!-- Large Items -->
     <div class="large">
-       <div class="large-column">
-         Mother of Three Buys Tuna Steak at Phish Concert. Leaves,"Feeling Funny."
-       </div>
-       <div class="large-column">
-        MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
-        Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
-        pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque
-        vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
-        Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
-        sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
-       </div>
-       <div class="large-column">
-         <h2>Orca Spends Vacation at Land World Puget</h2>
-         <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
-          purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
-          pulvinar ante accumsan...</p>
-       </div>
-       <div class="large-column">Earth Spins Backwards for 2017</div>
-       <div class="large-column">
-         <h2>Burger for Breakfast: How Early is too Early?</h2>
-         <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut,
-          rutrum enim. Praesent eu nisl erat.</p>
-       </div>
-       <div class="large-column">
-         Research Shows Cameras Erase Memory
-       </div>
+
+    <!-- Image Container -->
+    <div class="phish">
+      <h1 class="headline">Mother of Three Buys Tuna Steak at Phish Concert. Leaves,"Feeling Funny."</h1>
+    </div>
+    <div>
+      <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
+      Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
+      pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque
+      vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
+      Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
+      sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+    </div>
+
+    <div>
+      <h2>Orca Spends Vacation at Land World Puget</h2>
+      <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
+      purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
+      pulvinar ante accumsan...</p>
+    </div>
+
+    <!-- Image Container -->
+    <div class="earth">
+      <h2 class="backwards">Earth Spins Backwards for 2017</h2>
+    </div>
+
+    <div>
+      <h2>Burger for Breakfast: How Early is too Early?</h2>
+      <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut,
+      rutrum enim. Praesent eu nisl erat.</p>
+    </div>
+
+    <div class="research">
+      <p class="cameras">Research Shows Cameras Erase Memory</p>
+    </div>
     </div>
 
     <!-- Medium Items -->
@@ -83,6 +92,7 @@
 
     <!-- Small Items -->
     <div class="small">
+       <img src="./resources/images/cookie.png" alt="cookie">
        <div class="small-column">
          <h2>NEWS BITES</h2>
          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials
