--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
     <!-- Medium Items -->
     <div class="medium">
-        <div class="medium-column">
+
+        <div>
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
           <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.
           Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed.
@@ -81,19 +82,22 @@
           Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
           </p>
        </div>
-       <div class="medium-column">
-         Cats in Control-Is It a Thing?
-       </div>
-       <div class="medium-column">
-         BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor,
-         quis commodo tellus pellentesque in.
+
+    <!-- Image Container -->
+    <div class="cats">
+      <h2 class="control">Cats in Control-<br>Is It a Thing?</h2>
+    </div>
+
+       <div>
+         <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor,
+         quis commodo tellus pellentesque in.</p>
        </div>
     </div>
 
     <!-- Small Items -->
     <div class="small">
        <img src="./resources/images/cookie.png" alt="cookie">
-       <div class="small-column">
+       <div>
          <h2>NEWS BITES</h2>
          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials
           Finally a Top Secret Way You Can</p>
