--- a/index.html
+++ b/index.html
@@ -29,49 +29,48 @@
 <!-- Content Container -->
     <div class="Main">
 
-  <!-- Column Container and flex items -->
-    <!-- Large Items -->
-    <div class="large">
+<!-- Column Container and flex items -->
+      <!-- Large Items -->
+      <div class="large">
 
-    <!-- Image Container -->
-    <div class="phish">
-      <h1 class="headline">Mother of Three Buys Tuna Steak at Phish Concert. Leaves,"Feeling Funny."</h1>
-    </div>
-    <div>
-      <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
-      Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
-      pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque
-      vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
-      Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
-      sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
-    </div>
+        <!-- Image Container -->
+        <div class="phish">
+          <h1 class="headline">Mother of Three Buys Tuna Steak at Phish Concert. Leaves,"Feeling Funny."</h1>
+        </div>
+        <div>
+          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim.
+          Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et,
+          pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque
+          vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
+          Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
+          sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+        </div>
 
-    <div>
-      <h2>Orca Spends Vacation at Land World Puget</h2>
-      <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
-      purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
-      pulvinar ante accumsan...</p>
-    </div>
+        <div class="group">
+           <h2>Orca Spends Vacation at Land World Puget</h2>
+             <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
+             purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
+             pulvinar ante accumsan...</p>
 
-    <!-- Image Container -->
-    <div class="earth">
-      <h2 class="backwards">Earth Spins Backwards for 2017</h2>
-    </div>
+            <!-- Image Container -->
+           <div class="earth">
+             <h2 class="backwards">Earth Spins Backwards for 2017</h2>
+           </div>
+        </div>
 
-    <div>
-      <h2>Burger for Breakfast: How Early is too Early?</h2>
-      <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut,
-      rutrum enim. Praesent eu nisl erat.</p>
-    </div>
+        <div class="group">
+            <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut,
+              rutrum enim. Praesent eu nisl erat.</p>
 
-    <div class="research">
-      <p class="cameras">Research Shows Cameras Erase Memory</p>
-    </div>
-    </div>
+            <div class="research">
+              <p class="cameras">Research Shows Cameras Erase Memory</p>
+            </div>
+        </div>
+      </div>
 
-    <!-- Medium Items -->
-    <div class="medium">
-
+      <!-- Medium Items -->
+      <div class="medium">
         <div>
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
           <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.
@@ -81,29 +80,29 @@
           pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum.
           Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
           </p>
-       </div>
+      </div>
 
-    <!-- Image Container -->
-    <div class="cats">
-      <h2 class="control">Cats in Control-<br>Is It a Thing?</h2>
+      <!-- Image Container -->
+      <div class="cats">
+        <h2 class="control">Cats in Control-<br>Is It a Thing?</h2>
+      </div>
+
+      <div>
+        <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor,
+        quis commodo tellus pellentesque in.</p>
+      </div>
     </div>
 
-       <div>
-         <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor,
-         quis commodo tellus pellentesque in.</p>
-       </div>
+      <!-- Small Items -->
+      <div class="small">
+        <img src="./resources/images/cookie.png" alt="cookie">
+      <div>
+        <h3>NEWS BITES</h3>
+        <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials
+        Finally a Top Secret Way You Can</p>
+      </div>
     </div>
 
-    <!-- Small Items -->
-    <div class="small">
-       <img src="./resources/images/cookie.png" alt="cookie">
-       <div>
-         <h2>NEWS BITES</h2>
-         <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials
-          Finally a Top Secret Way You Can</p>
-       </div>
-    </div>
-
-   </div>
+  </div>
   </body>
 </html>
