--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         </div>
 
         <div class="group">
-           <h2>Orca Spends Vacation at Land World Puget</h2>
+          <div class="group1">
+             <h2>Orca Spends Vacation at Land World Puget</h2>
              <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
              purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
              pulvinar ante accumsan...</p>
@@ -56,10 +57,10 @@
            <div class="earth">
              <h2 class="backwards">Earth Spins Backwards for 2017</h2>
            </div>
-        </div>
+         </div>
 
-        <div class="group">
-            <h2>Burger for Breakfast: How Early is too Early?</h2>
+        <div class="group2">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
               <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut,
               rutrum enim. Praesent eu nisl erat.</p>
 
@@ -67,6 +68,7 @@
               <p class="cameras">Research Shows Cameras Erase Memory</p>
             </div>
         </div>
+       </div>
       </div>
 
       <!-- Medium Items -->
