--- a/index.html
+++ b/index.html
@@ -54,26 +54,26 @@
              pulvinar ante accumsan...</p>
 
             <!-- Image Container -->
-           <div class="earth">
-             <h2 class="backwards">Earth Spins Backwards for 2017</h2>
-           </div>
-         </div>
+             <div class="earth">
+               <p class="backwards">Earth Spins Backwards for 2017</p>
+             </div>
+          </div>
 
-        <div class="group2">
+          <div class="group2">
               <h2>Burger for Breakfast: How Early is too Early?</h2>
               <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut,
               rutrum enim. Praesent eu nisl erat.</p>
 
-            <div class="research">
-              <p class="cameras">Research Shows Cameras Erase Memory</p>
-            </div>
+              <div class="research">
+                <p class="cameras">Research Shows Cameras Erase Memory</p>
+              </div>
+          </div>
         </div>
-       </div>
       </div>
 
       <!-- Medium Items -->
       <div class="medium">
-        <div>
+        <div class="fbi">
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
           <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.
           Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed.
@@ -100,8 +100,12 @@
         <img src="./resources/images/cookie.png" alt="cookie">
       <div>
         <h3>NEWS BITES</h3>
-        <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials
-        Finally a Top Secret Way You Can</p>
+        <p class="bites">Cat Emoji Goes Viral</p>
+        <p class="bites">Buy Youtube Views</p>
+        <p class="bites">Home Business Advertising Ideas</p>
+        <p class="bites">Advertising Internet Online</p>
+        <p class="bites">Illustration in Marketing Materials</p>
+        <p class="bites">Finally a Top Secret Way You Can</p>
       </div>
     </div>
 
