--- a/index.html
+++ b/index.html
@@ -108,7 +108,19 @@
         <p class="bites">Finally a Top Secret Way You Can</p>
       </div>
     </div>
-
   </div>
+
+    <div class="footer">
+      <div class="bottomlogo">My Times
+        <span class="bracket">|</span>
+        <span class="foot"><a href="#World">World</a></span>
+        <span class="foot"><a href="#US">U.S.</a></span>
+        <span class="foot"><a href="#Tech">Tech</a></span>
+        <span class="foot"><a href="#Science">Science</a></span>
+      </div>
+      <div class="copy">
+        &copy; 2016, My Times (A Division of Codecademy bite)
+      </div>
+    </div>
   </body>
 </html>
